feat: Add Dockerfile and docker build workflow
Docker files uses Scratch image creation from https://github.com/isaul32/spring-boot-native-from-scratch-sample

--- a/deploy_config.yaml
+++ b/deploy_config.yaml
@@ -9,3 +9,6 @@ tests:
       - "Dbuild.branch=${GIT_BRANCH}"
 packaging:
   docker:
+    name: "spring-boot-sample-app"
+    dockerfile: "Dockerfile"
+    registry: "docker.io"
